changed readme and added images

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   </head>
 
   <body class="bkg">
-    <section class="landing-style" id="landing">
-      <h1>
+    <section id="landing">
+      <h1 class="landing">
         Welcome to the Chicago Sports Quiz! Do you think you can answer all the
         questions corretly in 25 seconds? Have a go!
       </h1>
